// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideTabs renders multiple tabs correctly 1`] = `

<div class="container">
  <ul class="tabList"
      role="tablist"
  >
    <li class="tabItem"
        role="presentation"
    >
      <a class="tabLink tabLinkSelected"
         href="#section-1"
         id="section-1-tab"
         aria-controls="section-1"
         aria-selected="true"
         role="tab"
      >
        Tab 1
      </a>
    </li>
    <li class="tabItem"
        role="presentation"
    >
      <a class="tabLink"
         href="#section-2"
         id="section-2-tab"
         tabindex="-1"
         aria-controls="section-2"
         aria-selected="false"
         role="tab"
      >
        Tab 2
      </a>
    </li>
  </ul>
  <section class="panel"
           id="section-1"
           data-testid="Tab 1"
           aria-labelledby="section-1-tab"
           role="tabpanel"
           tabindex="-1"
  >
    <p>
      Test section 1 content
    </p>
  </section>
  <section class="panel panelHidden"
           id="section-2"
           data-testid="Tab 2"
           aria-labelledby="section-2-tab"
           hidden
           role="tabpanel"
           tabindex="-1"
  >
    <p>
      Test section 2 content
    </p>
  </section>
</div>

`;

exports[`SideTabs renders single tab correctly 1`] = `

<div class="container">
  <ul class="tabList"
      role="tablist"
  >
    <li class="tabItem"
        role="presentation"
    >
      <a class="tabLink tabLinkSelected"
         href="#section-1"
         id="section-1-tab"
         aria-controls="section-1"
         aria-selected="true"
         role="tab"
      >
        Tab 1
      </a>
    </li>
  </ul>
  <section class="panel"
           id="section-1"
           data-testid="Tab 1"
           aria-labelledby="section-1-tab"
           role="tabpanel"
           tabindex="-1"
  >
    <p>
      Test section 1 content
    </p>
  </section>
</div>

`;
